2007-08-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-fixFontAttributeInRange:): 
	First attempt at font attribute fixing.

2007-08-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSFont.h: Add MacOSX 10.4 methods and constants.
	* Source/NSFont.m: Add MacOSX 10.4 methods. Remove
	NSFontDescriptor code. 
	* Source/NSFont.m (+initialize): Read in preferred fonts from user defaults.
	* Headers/AppKit/NSFontDescriptor.h: Clean up includes.
	* Source/NSFontDescriptor.m: New file, split out from NSFont.m.
	* Source/externs.m: Moved NSFontDescriptor strings to here.
	* GNUMakefile: Add NSFontDescriptor.m

2007-08-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSScreen.h: Add method userSpaceScaleFactor.
	* Source/NSScreen.m: Implement userSpaceScaleFactor. Correct
	mainScreen. Listen to NSApplicationDidChangeScreenParametersNotification.
	Get default menu height from NSMenuView. General cleanup.
	
2007-08-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-initWithCoder:),
	* Source/NSMenuItem.m (-initWithCoder:): Adopt to changed values
	for _keyEquivalentModifierMask. These have changed through the
	NSEvent.h change.

2007-08-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-displayIfNeededInRectIgnoringOpacity:):
	Correct spelling in comment.
	* Headers/AppKit/NSLevelIndicatorCell.h: Add ivar for cell frame.
	* Source/NSLevelIndicator.m (-rectOfTickMarkAtIndex:, -cellSize): Implement. 
	Patch by Christopher Elsmore <elsmorian@gmail.com>.

2007-08-03 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSDocumentController.h,
	* Source/NSDocumentController.m (-maximumRecentDocumentCount): Add
	missing method.
	* Headers/AppKit/NSEvent.h,
	* Source/NSEvent.m: Add MacOSX 10.4 methods and constants. Resort
	event types to be binary compatible to MacOSX.
	* Source/Functions.m (NSEventMaskFromType): Remove.
	* Source/NSWindow.m (-sendEvent:): Handle new event types.
	
2007-08-03 Richard Frith-Macdonald <rfm@gnu.org>
