@@ -1,3 +1,10 @@
+2007-08-12 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSAttributedString.m (-_substituteFontWithName:font:):
+	Let the font manager handle the font convertion.
+	* Source/NSPrintOperation.m (_print): Don't adjust page when page
+	range is known.
+	
 2007-08-09 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSAttributedString.m (-fixFontAttributeInRange:): 
